[workspace]
# default-members = ["hyperion-core"]
members = [
    "hyperion-core",
    "hyperion-miner",
    "hyperion-node",
]
resolver = "2"

[workspace.package]
authors = ["Ashintosh <ash@opensrcit.com>"]
license = "GPL-3.0"
repository = "https://github.com/Ashintosh/hyperion"
rust-version = "1.89.0"

[workspace.metadata]
ci = { pipeline = "main", triggers = [ "push", "pull_request" ] }
docs = "https://link.to.docs"

[profile.dev]
debug = true
opt-level = 1

[profile.release]
debug = false
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[profile.profiling]
debug = true
inherits = "release"
strip = false
