[package]
name = "hyperion-core"
version = "0.1.0"
edition = "2024"

[lib]
#ame = "hyperion_core"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
bincode = "2.0.1"
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
