[package]
name = "hyperion-miner"
edition = "2024"
version = "0.1.0"

[dependencies]
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
hyperion-core = { path = "../hyperion-core" }
tokio = { version = "1.47.1", features = ["full"] } 
toml = "0.9.5"
num_cpus = "1.17.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.143"
tracing = "0.1.41"
hex = "0.4.3"
tracing-subscriber = { version = "0.3.20", features = ["ansi", "env-filter", "json"] }
clap = "4.5.47"
tracing-appender = "0.2.3"
tracing-rolling-file = "0.1.3"
