[package]
name = "hyperion-node"
edition = "2024"
version = "0.1.0"
# authors.workspace = true
# edition.workspace = true
# license.workspace = true
# repository.workspace = true
# rust-version.workspace = true

[dependencies]
hex = "0.4.3"
hyperion-core = { path = "../hyperion-core" }
tokio = { version = "1.47.1", features = ["full"] } 
