[package]
name = "hyperion-node"
edition = "2024"
version = "0.1.0"
# authors.workspace = true
# edition.workspace = true
# license.workspace = true
# repository.workspace = true
# rust-version.workspace = true

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
hex = "0.4.3"
hyperion-core = { path = "../hyperion-core" }
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] } 
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-rolling-file = "0.1.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
